# BifurcaGym

./: .gitignore  README.md  pyproject.toml
baselines/: ppo_baseline.py
bifurcagym/: __init__.py  registration.py  spaces.py
bifurcagym/envs/: __init__.py  base_env.py  tesy_env_render.py  tesy_reward_space.py  tesy_runge-kutta.py  utils.py
bifurcagym/envs/classical_control/: __init__.py  acrobot.py  cartpole.py  n_cartpole.py  n_pendulum.py  pendulum.py  pilco_cartpole.py  wet_chicken.py
bifurcagym/envs/continuous_time_chaos/: __init__.py  arnold_beltrami_childress_flow.py  bickley_jet_flow.py  chua.py  double_gyre_flow.py  kuramoto_sivashinsky.py  lorenz63.py  quadruple_gyre_flow.py  rossler.py
bifurcagym/envs/discrete_time_chaos/: __init__.py  bernoulli_map.py  henon_map.py  ikeda_map.py  logistic_map.py  tent_map.py  tesy_fixed_point_calc.py  tinkerbell_map.py
bifurcagym/envs/fluid_control/: __init__.py  fluidic_pinball.py  pinball_speed_test.py
bifurcagym/envs/multi_agent_control/: AYS_Environment.py  AYS_IAM.py
bifurcagym/envs/non_stationary/: __init__.py  boat_in_current.py  external_forcing_tesy.py  jax-cfd_test.py  phi_flow_testy.py  testasdfasf_OG.py
bifurcagym/wrappers/: __init__.py  autoreset_wrapper.py  deltaobs_wrapper.py  metrics_wrapper.py  normalised_wrapper.py  periodic_wrapper.py  vmap_wrapper.py
project_name/: __init__.py  registration.py
project_name/envs/: __init__.py  base_env.py  tesy_env_render.py
project_name/envs/classical_control/: Pendulum.py  (+6 more)
project_name/wrappers/: __init__.py  autoreset_wrapper.py  brax_wrappers.py  deltaobs_wrapper.py  generative_wrapper.py  normalised_wrapper.py  periodic_wrapper.py
tests/: test_env.py  test_env_render.py  test_wrappers.py
tests/baselines/: ppo_baseline.py
(+9 files in other folders)
